# dwidder

./: CMakeLists.txt
dfhack-qt/: CMakeLists.txt
dfhack-qt/qapplication/: Application.cpp
dwidder/: CMakeLists.txt  DwidderApp.cpp  DwidderApp.h  MainWindow.cpp  MainWindow.h  announcements.cpp  announcements.h  announcements_channel.cpp  announcements_channel.h  calendar.cpp  calendar.h  calendar_channel.cpp  calendar_channel.h  dwidder_utils.cpp  dwidder_utils.h  main.cpp
dwidder/channels/activities/: activities_channel.cpp  activities_channel.h
dwidder/channels/announcements/: announcements.cpp  announcements.h  announcements_channel.cpp  announcements_channel.h
dwidder/channels/buildings/: building_channel.cpp  building_channel.h
dwidder/channels/calendar/: calendar.cpp  calendar.h  calendar_channel.cpp  calendar_channel.h
dwidder/channels/crime/: crime_channel.cpp  crime_channel.h
dwidder/channels/incidents/: incidents_channel.cpp  incidents_channel.h
dwidder/channels/items/: items_channel.cpp  items_channel.h
dwidder/channels/mandates/: mandates_channel.cpp  mandates_channel.h
dwidder/channels/weather/: weather_channel.cpp  weather_channel.h
include/: utils.h
qapplication/: CMakeLists.txt
